--- a/index.html
+++ b/index.html
@@ -148,10 +148,16 @@
                   <i class="fa fa-calendar text-white" aria-hidden="true"></i>
                     <span class="lan-4">Category</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="userManagement.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i>Add Category</a></li>
-                    <li><a href="categoryManagement.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Category List</a></li>
-                    <li><a href="categoryManagementList.html"><i class="fa fa-list text-white" aria-hidden="true"></i>SubCategory List</a></li>
-                     <li><a href="subCategory.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Add SubCategory List</a></li>
+                   <li><a href="addcategoryManagement.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i>Add Category</a></li>
+                   <li><a href="categoryManagementList.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Category List</a></li>
+                  </ul>
+                </li>
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+                  <i class="fa fa-server text-white" aria-hidden="true"></i>
+                    <span class="lan-6">Sub Category</span></a>
+                  <ul class="sidebar-submenu">
+                    <li><a href="subCategory.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Add SubCategory List</a></li>
+                    <li><a href="subCategorylist.html"><i class="fa fa-list text-white" aria-hidden="true"></i>SubCategory List</a></li>
                   </ul>
                 </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
@@ -186,6 +192,11 @@
                     <li><a href="popularCategory.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Populary Category</a></li>
                     <li><a href="popularCategoryList.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Populary Category List</a></li>
                   </ul>
+                </li>
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="userManagement.html">
+                  <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
+                  <span class="lan-2">User Management</span></a>
                 </li>
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
