--- a/businessListing.html
+++ b/businessListing.html
@@ -146,10 +146,16 @@
                   <i class="fa fa-calendar text-white" aria-hidden="true"></i>
                     <span class="lan-4">Category</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="userManagement.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i>Add Category</a></li>
-                    <li><a href="categoryManagement.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Category List</a></li>
-                    <li><a href="categoryManagementList.html"><i class="fa fa-list text-white" aria-hidden="true"></i>SubCategory List</a></li>
-                     <li><a href="subCategory.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Add SubCategory List</a></li>
+                   <li><a href="addcategoryManagement.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i>Add Category</a></li>
+                   <li><a href="categoryManagementList.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Category List</a></li>
+                  </ul>
+                </li>
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+                  <i class="fa fa-server text-white" aria-hidden="true"></i>
+                    <span class="lan-6">Sub Category</span></a>
+                  <ul class="sidebar-submenu">
+                    <li><a href="subCategory.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Add SubCategory List</a></li>
+                    <li><a href="subCategorylist.html"><i class="fa fa-list text-white" aria-hidden="true"></i>SubCategory List</a></li>
                   </ul>
                 </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
@@ -185,6 +191,11 @@
                     <li><a href="popularCategoryList.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Populary Category List</a></li>
                   </ul>
                 </li>
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="userManagement.html">
+                  <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
+                  <span class="lan-2">User Management</span></a>
+                </li>
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
           </nav>
@@ -199,10 +210,13 @@
                 </div>
                 <div class="col-6">
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">                                       
-                        <svg class="stroke-icon">
-                          <use href="assets/svg/icon-sprite.svg#stroke-home"></use>
-                        </svg></a></li>
+                    <li class="breadcrumb-item">
+                        <a href="index.html">                                       
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#2A3650" viewBox="0 0 24 24">
+                          <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
+                        </svg>
+                        </a>
+                    </li>
                     <!-- <li class="breadcrumb-item">Design</li> -->
                     <li class="breadcrumb-item active">Business Listing</li>
                   </ol>
