--- a/businessListingView.html
+++ b/businessListingView.html
@@ -146,10 +146,16 @@
                   <i class="fa fa-calendar text-white" aria-hidden="true"></i>
                     <span class="lan-4">Category</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="userManagement.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i>Add Category</a></li>
-                    <li><a href="categoryManagement.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Category List</a></li>
-                    <li><a href="categoryManagementList.html"><i class="fa fa-list text-white" aria-hidden="true"></i>SubCategory List</a></li>
-                     <li><a href="subCategory.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Add SubCategory List</a></li>
+                   <li><a href="addcategoryManagement.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i>Add Category</a></li>
+                   <li><a href="categoryManagementList.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Category List</a></li>
+                  </ul>
+                </li>
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+                  <i class="fa fa-server text-white" aria-hidden="true"></i>
+                    <span class="lan-6">Sub Category</span></a>
+                  <ul class="sidebar-submenu">
+                    <li><a href="subCategory.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Add SubCategory List</a></li>
+                    <li><a href="subCategorylist.html"><i class="fa fa-list text-white" aria-hidden="true"></i>SubCategory List</a></li>
                   </ul>
                 </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
@@ -185,6 +191,11 @@
                     <li><a href="popularCategoryList.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Populary Category List</a></li>
                   </ul>
                 </li>
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="userManagement.html">
+                  <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
+                  <span class="lan-2">User Management</span></a>
+                </li>
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
           </nav>
@@ -199,10 +210,13 @@
                 </div>
                 <div class="col-6">
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">                                       
-                        <svg class="stroke-icon">
-                          <use href="assets/svg/icon-sprite.svg#stroke-home"></use>
-                        </svg></a></li>
+                    <li class="breadcrumb-item">
+                        <a href="index.html">                                       
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#2A3650" viewBox="0 0 24 24">
+                          <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
+                        </svg>
+                        </a>
+                    </li>
                     <!-- <li class="breadcrumb-item">Design</li> -->
                     <li class="breadcrumb-item active">Business View</li>
                   </ol>
@@ -451,55 +465,49 @@
                                                 <div class="card">
                                                   <div class="card-header" id="headingOne">
                                                     <h2 class="mb-0">
-                                                      <button class="btn btn-link btn-block text-start f-w-600 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">My Gallery</button>
+                                                      <button class="btn btn-link btn-block text-start f-w-600 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">My Gallery </button>
                                                     </h2>
                                                   </div>
                                                   <div class="collapse" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#accordionExample" style="">
                                                     <div class="card-body socialprofile filter-cards-view">
                                                       <div class="row">
-                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
                                                             <div class="position-relative rounded overflow-hidden shadow">
-                                                                <img class="img-fluid mt-5" alt="" src="../assets/images/social-app/timeline-3.png">
+                                                                <img class="img-fluid mt-5" alt="" src="https://img.freepik.com/free-vector/illustration-gallery-icon_53876-27002.jpg">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
+                                                            <div class="position-relative rounded overflow-hidden shadow">
+                                                                <img class="img-fluid mt-5" alt="" src="https://img.freepik.com/free-vector/illustration-gallery-icon_53876-27002.jpg">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
+                                                            <div class="position-relative rounded overflow-hidden shadow">
+                                                                <img class="img-fluid mt-5" alt="" src="https://img.freepik.com/free-vector/illustration-gallery-icon_53876-27002.jpg">
                                                                 <div class="position-absolute bottom-0 start-0 w-100 text-overlay bg-white bg-opacity-25 text-dark p-4">
                                                                     <h6 class="fw-bold mb-2">Image</h6>
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
                                                             <div class="position-relative rounded overflow-hidden shadow">
-                                                                <img class="img-fluid mt-5" alt="" src="../assets/images/social-app/timeline-3.png">
+                                                                <img class="img-fluid mt-5" alt="" src="https://img.freepik.com/free-vector/illustration-gallery-icon_53876-27002.jpg">
                                                                 <div class="position-absolute bottom-0 start-0 w-100 text-overlay bg-white bg-opacity-25 text-dark p-4">
                                                                     <h6 class="fw-bold mb-2">Image</h6>
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
                                                             <div class="position-relative rounded overflow-hidden shadow">
-                                                                <img class="img-fluid mt-5" alt="" src="../assets/images/social-app/timeline-3.png">
+                                                                <img class="img-fluid mt-5" alt="" src="https://img.freepik.com/free-vector/illustration-gallery-icon_53876-27002.jpg">
                                                                 <div class="position-absolute bottom-0 start-0 w-100 text-overlay bg-white bg-opacity-25 text-dark p-4">
                                                                     <h6 class="fw-bold mb-2">Image</h6>
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
                                                             <div class="position-relative rounded overflow-hidden shadow">
-                                                                <img class="img-fluid mt-5" alt="" src="../assets/images/social-app/timeline-3.png">
-                                                                <div class="position-absolute bottom-0 start-0 w-100 text-overlay bg-white bg-opacity-25 text-dark p-4">
-                                                                    <h6 class="fw-bold mb-2">Image</h6>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                                                            <div class="position-relative rounded overflow-hidden shadow">
-                                                                <img class="img-fluid mt-5" alt="" src="../assets/images/social-app/timeline-3.png">
-                                                                <div class="position-absolute bottom-0 start-0 w-100 text-overlay bg-white bg-opacity-25 text-dark p-4">
-                                                                    <h6 class="fw-bold mb-2">Image</h6>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                                                            <div class="position-relative rounded overflow-hidden shadow">
-                                                                <img class="img-fluid mt-5" alt="" src="../assets/images/social-app/timeline-3.png">
+                                                                <img class="img-fluid mt-5" alt="" src="https://img.freepik.com/free-vector/illustration-gallery-icon_53876-27002.jpg">
                                                                 <div class="position-absolute bottom-0 start-0 w-100 text-overlay bg-white bg-opacity-25 text-dark p-4">
                                                                     <h6 class="fw-bold mb-2">Image</h6>
                                                                 </div>
@@ -519,51 +527,51 @@
                                                     <div class="card-body social-status filter-cards-view">
                                                       <div class="card-body socialprofile filter-cards-view">
                                                       <div class="row">
-                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
                                                             <div class="position-relative rounded overflow-hidden shadow">
-                                                                <img class="img-fluid mt-5" alt="" src="../assets/images/social-app/timeline-3.png">
+                                                                <img class="img-fluid mt-5" alt="" src="https://img.freepik.com/free-vector/illustration-gallery-icon_53876-27002.jpg">
                                                                 <div class="position-absolute bottom-0 start-0 w-100 text-overlay bg-white bg-opacity-25 text-dark p-4">
-                                                                    <h6 class="fw-bold mb-2">Image</h6>
+                                                                    <h6 class="fw-bold mb-2">Videos</h6>
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
                                                             <div class="position-relative rounded overflow-hidden shadow">
-                                                                <img class="img-fluid mt-5" alt="" src="../assets/images/social-app/timeline-3.png">
+                                                                <img class="img-fluid mt-5" alt="" src="https://img.freepik.com/free-vector/illustration-gallery-icon_53876-27002.jpg">
                                                                 <div class="position-absolute bottom-0 start-0 w-100 text-overlay bg-white bg-opacity-25 text-dark p-4">
-                                                                    <h6 class="fw-bold mb-2">Image</h6>
+                                                                    <h6 class="fw-bold mb-2">Videos</h6>
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
                                                             <div class="position-relative rounded overflow-hidden shadow">
-                                                                <img class="img-fluid mt-5" alt="" src="../assets/images/social-app/timeline-3.png">
+                                                                <img class="img-fluid mt-5" alt="" src="https://img.freepik.com/free-vector/illustration-gallery-icon_53876-27002.jpg">
                                                                 <div class="position-absolute bottom-0 start-0 w-100 text-overlay bg-white bg-opacity-25 text-dark p-4">
-                                                                    <h6 class="fw-bold mb-2">Image</h6>
+                                                                    <h6 class="fw-bold mb-2">Videos</h6>
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
                                                             <div class="position-relative rounded overflow-hidden shadow">
-                                                                <img class="img-fluid mt-5" alt="" src="../assets/images/social-app/timeline-3.png">
+                                                                <img class="img-fluid mt-5" alt="" src="https://img.freepik.com/free-vector/illustration-gallery-icon_53876-27002.jpg">
                                                                 <div class="position-absolute bottom-0 start-0 w-100 text-overlay bg-white bg-opacity-25 text-dark p-4">
-                                                                    <h6 class="fw-bold mb-2">Image</h6>
+                                                                    <h6 class="fw-bold mb-2">Videos</h6>
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
                                                             <div class="position-relative rounded overflow-hidden shadow">
-                                                                <img class="img-fluid mt-5" alt="" src="../assets/images/social-app/timeline-3.png">
+                                                                <img class="img-fluid mt-5" alt="" src="https://img.freepik.com/free-vector/illustration-gallery-icon_53876-27002.jpg">
                                                                 <div class="position-absolute bottom-0 start-0 w-100 text-overlay bg-white bg-opacity-25 text-dark p-4">
-                                                                    <h6 class="fw-bold mb-2">Image</h6>
+                                                                    <h6 class="fw-bold mb-2">Videos</h6>
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                                                        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
                                                             <div class="position-relative rounded overflow-hidden shadow">
-                                                                <img class="img-fluid mt-5" alt="" src="../assets/images/social-app/timeline-3.png">
+                                                                <img class="img-fluid mt-5" alt="" src="https://img.freepik.com/free-vector/illustration-gallery-icon_53876-27002.jpg">
                                                                 <div class="position-absolute bottom-0 start-0 w-100 text-overlay bg-white bg-opacity-25 text-dark p-4">
-                                                                    <h6 class="fw-bold mb-2">Image</h6>
+                                                                    <h6 class="fw-bold mb-2">Videos</h6>
                                                                 </div>
                                                             </div>
                                                         </div>
