--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/vendors/bootstrap.css">
     <!-- App css-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/dev-style.css">
     <link id="color" rel="stylesheet" href="assets/css/color-1.css" media="screen">
     <!-- Responsive css-->
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
@@ -145,57 +146,57 @@
                 </li>
                 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-calendar text-white" aria-hidden="true"></i>
+                  <i class="fa fa-tags text-white" aria-hidden="true"></i>
                     <span class="lan-4">Category</span></a>
                   <ul class="sidebar-submenu">
-                   <li><a href="addcategoryManagement.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i>Add Category</a></li>
-                   <li><a href="categoryManagementList.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Category List</a></li>
+                   <li><a href="addcategoryManagement.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i>Add Category</a></li>
+                   <li><a href="categoryManagementList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Category List</a></li>
                   </ul>
                 </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-server text-white" aria-hidden="true"></i>
+                  <i class="fa fa-th-large text-white" aria-hidden="true"></i>
                     <span class="lan-6">Sub Category</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="subCategory.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Add SubCategory List</a></li>
-                    <li><a href="subCategorylist.html"><i class="fa fa-list text-white" aria-hidden="true"></i>SubCategory List</a></li>
+                    <li><a href="subCategory.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i>Add SubCategory List</a></li>
+                    <li><a href="subCategorylist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>SubCategory List</a></li>
                   </ul>
                 </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-server text-white" aria-hidden="true"></i>
+                  <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
                     <span class="lan-6">Bussiness</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="businessListingView.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Bussiness</a></li>
-                    <li><a href="businessListing.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Bussiness List</a></li>
+                    <li><a href="businessListingView.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i> Add Bussiness</a></li>
+                    <li><a href="businessListing.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Bussiness List</a></li>
                   </ul>
                 </li>
                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-newspaper-o text-white" aria-hidden="true"></i>
+                  <i class="fa fa-question-circle text-white" aria-hidden="true"></i>
                   <span class="lan-5">Enquiry</span></a>
                   <ul class="sidebar-submenu">
-                    <!-- <li><a href="design-add.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Design</a></li> -->
-                    <li><a href="inquiry.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Enquiry List</a></li>
+                    <!-- <li><a href="design-add.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i> Add Design</a></li> -->
+                    <li><a href="inquiry.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Enquiry List</a></li>
                   </ul>
                 </li>
                  <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-newspaper-o text-white" aria-hidden="true"></i>
+                  <i class="fa fa-credit-card text-white" aria-hidden="true"></i>
                   <span class="lan-5">Wallet</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="WalletRequest.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Wallet Request</a></li>
-                    <li><a href="WalletApprove.html"><i class="fa fa-list text-white" aria-hidden="true"></i>Wallet Approve</a></li>
+                     <li><a href="WalletRequest.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Wallet Request</a></li>
+                    <li><a href="WalletApprove.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Wallet Approve</a></li>
                   </ul>
                 </li>
                 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
+                  <i class="fa fa-thumbs-up text-white" aria-hidden="true"></i>
                   <span class="lan-7">Populary</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="popularCategory.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Populary Category</a></li>
-                    <li><a href="popularCategoryList.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Populary Category List</a></li>
+                    <li><a href="popularCategory.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i> Add Populary Category</a></li>
+                    <li><a href="popularCategoryList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Populary Category List</a></li>
                   </ul>
                 </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="userManagement.html">
-                  <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
+                  <i class="fa fa-users text-white" aria-hidden="true"></i>
                   <span class="lan-2">User Management</span></a>
                 </li>
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
