--- a/categoryManagementList.html
+++ b/categoryManagementList.html
@@ -139,7 +139,7 @@
                 </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="index.html">
-                  <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
+                  <i class="fa fa-bar-chart text-white" aria-hidden="true"></i>
                   <span class="lan-2">Dasboard</span></a>
                 </li>
                 
