set data properly

--- a/WalletApprove.html
+++ b/WalletApprove.html
@@ -247,10 +247,10 @@
                         <tbody>
                            <tr>
                             <td class="text-center table-data">1</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">abc</td>
+                            <td class="text-center table-data">250</td>
+                            <td class="text-center table-data">Sai Services</td>
                             <td class="text-center table-data">22/05/2025</td>
-                            <td class="text-center table-data">22/05/2025</td>
+                            <td class="text-center table-data">25/05/2025</td>
                             
                            <td class="text-center col-fix table-data"> 
                                         <ul class="action d-flex justify-content-center"> 
@@ -261,10 +261,10 @@
                           </tr>
                           <tr>
                             <td class="text-center table-data">2</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">abc</td>
+                            <td class="text-center table-data">280</td>
+                            <td class="text-center table-data">Patel Agency</td>
                             <td class="text-center table-data">26/05/2025</td>
-                            <td class="text-center table-data">26/05/2025</td>
+                            <td class="text-center table-data">27/05/2025</td>
                             <td class="text-center col-fix table-data"> 
                                         <ul class="action d-flex justify-content-center"> 
                                           <!-- <li class="edit"> <a href="#" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li> -->
@@ -273,11 +273,11 @@
                                       </td>
                           </tr>
                            <tr>
-                            <td class="text-center table-data">2</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">abc</td>
+                            <td class="text-center table-data">3</td>
+                            <td class="text-center table-data">450</td>
+                            <td class="text-center table-data">Mehta Agency</td>
                             <td class="text-center table-data">26/05/2025</td>
-                            <td class="text-center table-data">26/05/2025</td>
+                            <td class="text-center table-data">27/05/2025</td>
                             <td class="text-center col-fix table-data"> 
                                         <ul class="action d-flex justify-content-center"> 
                                           <!-- <li class="edit"> <a href="#" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li> -->
@@ -288,19 +288,7 @@
                             </div>
                             </td>
                           </tr>
-                           <tr>
-                            <td class="text-center table-data">2</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">26/05/2025</td>
-                            <td class="text-center table-data">26/05/2025</td>
-                            <td class="text-center col-fix table-data"> 
-                                        <ul class="action d-flex justify-content-center"> 
-                                          <!-- <li class="edit"> <a href="#" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li> -->
-                                          <li class="delete"><a href="#" class="bg-danger p-2 rounded"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
-                                        </ul>
-                                      </td>
-                          </tr>
+
                           </tr>
                         </tbody>
                       </table>
