--- a/WalletRequest.html
+++ b/WalletRequest.html
@@ -246,8 +246,8 @@
                         <tbody>
                            <tr>
                             <td class="text-center table-data">1</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">abc</td>
+                            <td class="text-center table-data">250 </td>
+                            <td class="text-center table-data">Mehta Agency</td>
                             <td class="text-center table-data">22/05/2025</td>
                             
                             <td class="d-flex justify-content-center"> 
@@ -291,8 +291,8 @@
                           </tr>
                           <tr>
                             <td class="text-center table-data">2</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">abc</td>
+                            <td class="text-center table-data">260</td>
+                            <td class="text-center table-data">Patel Agency</td>
                             <td class="text-center table-data">26/05/2025</td>
                             <td class="d-flex justify-content-center"> 
                              <div class="dropdown">
@@ -322,9 +322,9 @@
                             </td>
                           </tr>
                            <tr>
-                            <td class="text-center table-data">2</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">abc</td>
+                            <td class="text-center table-data">3</td>
+                            <td class="text-center table-data">500</td>
+                            <td class="text-center table-data">Sai Services</td>
                             <td class="text-center table-data">26/05/2025</td>
                             <td class="d-flex justify-content-center"> 
                              <div class="dropdown">
@@ -353,38 +353,7 @@
                             </div>
                             </td>
                           </tr>
-                           <tr>
-                            <td class="text-center table-data">2</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">26/05/2025</td>
-                            <td class="d-flex justify-content-center"> 
-                             <div class="dropdown">
-                              <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></button>
-                              <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffc107" class="bi bi-ban" viewBox="0 0 16 16">
-                                      <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0"/>
-                                    </svg>
-                                    Cancle</a>
-                                    </li>
-                                <li><a class="dropdown-item" href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill=" #28a745" class="bi bi-check2-circle" viewBox="0 0 16 16">
-                                      <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0"/>
-                                      <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
-                                    </svg>
-                                    Approve</a>
-                                </li>
-                                <li><a class="dropdown-item" href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#dc3545" class="bi bi-trash-fill" viewBox="0 0 16 16">
-                                      <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5M8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5m3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0"/>
-                                    </svg> 
-                                    Delete</a>
-                                </li>       
-                              </ul>
-                            </div>
-                            </td>
-                          </tr>
+                         
                           </tr>
                         </tbody>
                       </table>
