--- a/addcategoryManagement.html
+++ b/addcategoryManagement.html
@@ -250,12 +250,12 @@
                                     <div class="valid-feedback">Looks good!</div>
                                   </div>
                                   <div class="col-sm-12"> 
-                                            <label class="form-label" for="formFile1"> Category Image<span class="txt-danger">*</span></label>
+                                            <label class="form-label" for="formFile1"> Category Icon<span class="txt-danger">*</span></label>
                                             <input class="form-control" id="formFile1" type="file" aria-label="file example" required="">
                                             <div class="invalid-feedback">Invalid form file selected</div>
                                           </div>
                                           <div class="col-sm-12"> 
-                                            <label class="form-label" for="formFile1"> Category Icon<span class="txt-danger">*</span></label>
+                                            <label class="form-label" for="formFile1">Sub Category Icon<span class="txt-danger">*</span></label>
                                             <input class="form-control" id="formFile1" type="file" aria-label="file example" required="">
                                             <div class="invalid-feedback">Invalid form file selected</div>
                                           </div>
