--- a/categoryManagementList.html
+++ b/categoryManagementList.html
@@ -241,16 +241,16 @@
                                       <th class="text-center">No.</th>
                                       <th class="text-center">Name</th>
                                       <th class="text-center">Sequence</th>
-                                      <th class="text-center">Category Image</th> 
+                                      <th class="text-center">Category Icon</th> 
                                       <th class="text-center">Action</th>
                                     </tr>
                                   </thead>
                                   <tbody>
                                     <tr>
                                       <td class="text-center table-data">1</td>
-                                      <td class="text-center table-data">SnowWhite</td>
+                                      <td class="text-center table-data">Doctors</td>
                                       <td class="text-center table-data">1</td>
-                                      <td class="text-center table-data"><img src="assets/images/demo img.avif" width="70px" height="70px" alt=""></td>                                      
+                                      <td class="text-center table-data"></td>                                      
                                       <td class="text-center col-fix table-data"> 
                                         <ul class="action d-flex justify-content-center"> 
                                           <li class="edit"> <a href="#" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
@@ -260,10 +260,23 @@
                                     </tr>
                                     <tr>
                                       <td class="text-center table-data">2</td>
-                                      <td class="text-center table-data">SnowWhite</td>
+                                      <td class="text-center table-data">Travel</td>
 
                                       <td class="text-center table-data">2</td>
-                                      <td class="text-center table-data"><img src="assets/images/demo 2.jpg" width="70px" height="70px" alt=""></td>
+                                      <td class="text-center table-data"></td>
+                                      <td class="text-center col-fix table-data"> 
+                                        <ul class="action d-flex justify-content-center"> 
+                                          <li class="edit"> <a href="#" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
+                                          <li class="delete"><a href="#" class="bg-danger p-2 rounded"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
+                                        </ul>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td class="text-center table-data">3</td>
+                                      <td class="text-center table-data">AC Services</td>
+
+                                      <td class="text-center table-data">3</td>
+                                      <td class="text-center table-data"></td>
                                       <td class="text-center col-fix table-data"> 
                                         <ul class="action d-flex justify-content-center"> 
                                           <li class="edit"> <a href="#" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
