--- a/inquiry.html
+++ b/inquiry.html
@@ -247,9 +247,9 @@
                         <tbody>
                            <tr>
                             <td class="text-center table-data">1</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">abc</td>
+                            <td class="text-center table-data">Patel Agency</td>
+                            <td class="text-center table-data">9999999999</td>
+                            <td class="text-center table-data">Whatsapp Message</td>
                             <td class="text-center table-data">22/05/2025</td>
                             
                             <td class="d-flex justify-content-center"> 
@@ -260,9 +260,9 @@
                           </tr>
                           <tr>
                             <td class="text-center table-data">2</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">xyz</td>
+                            <td class="text-center table-data">Patel Agency</td>
+                            <td class="text-center table-data">9999999999</td>
+                            <td class="text-center table-data">Check Location</td>
                             <td class="text-center table-data">26/05/2025</td>
                             <td class="d-flex justify-content-center"> 
                               <ul class="action"> 
@@ -271,10 +271,10 @@
                             </td>
                           </tr>
                            <tr>
-                            <td class="text-center table-data">2</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">xyz</td>
+                            <td class="text-center table-data">3</td>
+                            <td class="text-center table-data">OM Sai Service</td>
+                            <td class="text-center table-data">9999999999</td>
+                            <td class="text-center table-data">Call</td>
                             <td class="text-center table-data">26/05/2025</td>
                             <td class="d-flex justify-content-center"> 
                               <ul class="action"> 
@@ -282,18 +282,7 @@
                               </ul>
                             </td>
                           </tr>
-                           <tr>
-                            <td class="text-center table-data">2</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">xyz</td>
-                            <td class="text-center table-data">26/05/2025</td>
-                            <td class="d-flex justify-content-center"> 
-                              <ul class="action"> 
-                                <li class="delete"><a href="#" class="bg-danger p-2 rounded"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
-                              </ul>
-                            </td>
-                          </tr>
+                          
                           </tr>
                         </tbody>
                       </table>
