--- a/popularCategoryList.html
+++ b/popularCategoryList.html
@@ -245,11 +245,10 @@
                         <tbody>
                            <tr>
                             <td class="text-center table-data">1</td>
-                            <td class="text-center table-data">abc</td>
+                            <td class="text-center table-data">Home Services</td>
                             <td class="text-center table-data">
-                              <span class="badge rounded-pill badge-secondary p-1">Manufacturer</span>
-                              <span class="badge rounded-pill badge-danger p-1">abc</span>
-                              <span class="badge rounded-pill badge-warning p-1">Design</span>
+                              <span class="badge rounded-pill badge-secondary p-1">Ac Repair</span>
+                              <span class="badge rounded-pill badge-danger p-1">Cleaning Service</span>
                             </td>
                             <td class="d-flex justify-content-center"> 
                               <ul class="action"> 
@@ -260,11 +259,11 @@
                           </tr>
                           <tr>
                             <td class="text-center table-data">2</td>
-                            <td class="text-center table-data">abc</td>
+                            <td class="text-center table-data">Health & Fitness</td>
                             <td class="text-center table-data">
-                              <span class="badge rounded-pill badge-secondary p-1">Manufacturer</span>
-                              <span class="badge rounded-pill badge-danger p-1">abc</span>
-                              <span class="badge rounded-pill badge-warning p-1">Design</span>
+                              <span class="badge rounded-pill badge-secondary p-1">Gym</span>
+                              <span class="badge rounded-pill badge-danger p-1">Yoga</span>
+                              <span class="badge rounded-pill badge-warning p-1">Sports</span>
                             </td>
                             <td class="d-flex justify-content-center"> 
                               <ul class="action"> 
@@ -274,12 +273,12 @@
                             </td>
                           </tr>
                            <tr>
-                            <td class="text-center table-data">2</td>
-                            <td class="text-center table-data">abc</td>
+                            <td class="text-center table-data">3</td>
+                            <td class="text-center table-data">Education</td>
                             <td class="text-center table-data">
-                              <span class="badge rounded-pill badge-secondary p-1">Manufacturer</span>
-                              <span class="badge rounded-pill badge-danger p-1">abc</span>
-                              <span class="badge rounded-pill badge-warning p-1">Design</span>
+                              <span class="badge rounded-pill badge-secondary p-1">School</span>
+                              <span class="badge rounded-pill badge-danger p-1">College</span>
+                              <span class="badge rounded-pill badge-warning p-1">Classes</span>
                             </td>
                             <td class="d-flex justify-content-center"> 
                               <ul class="action"> 
