--- a/subCategory.html
+++ b/subCategory.html
@@ -239,7 +239,7 @@
                                 <form class="row g-3 needs-validation" novalidate="">
                               
                                   <div class="col-sm-6">
-                                    <label class="form-label" for="customState-wizard">Category<span
+                                    <label class="form-label" for="customState-wizard">Select Category<span
                                       class="txt-danger">*</span></label>
                                     <select class="form-select" id="customState-wizard" required="">
                                       <option selected="" disabled="" value="">Select Category</option>
@@ -252,7 +252,7 @@
                                     <div class="invalid-feedback">Please select a valid state.</div>
                                   </div>
                                   <div class="col-sm-6">
-                                    <label class="form-label" for="customName">Name og Sub Category<span class="txt-danger">*</span></label>
+                                    <label class="form-label" for="customName">Name of Sub-Category<span class="txt-danger">*</span></label>
                                     <input class="form-control" id="customName" type="text" placeholder="Name" required="">
                                     <div class="valid-feedback">Looks good!</div>
                                   </div>
