--- a/subCategorylist.html
+++ b/subCategorylist.html
@@ -248,9 +248,9 @@
                                                           <tbody>
                                                             <tr>
                                                               <td class="text-center table-data">1</td>
-                                                              <td class="text-center table-data">Abc</td>
+                                                              <td class="text-center table-data">All Option</td>
                                                               <td class="text-center table-data">1</td>
-                                                              <td class="text-center table-data">ABC</td>
+                                                              <td class="text-center table-data">AC Services</td>
                                                               <td class="d-flex justify-content-center"> 
                                                                 <ul class="action"> 
                                                                   <li class="edit"> <a href="#" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
@@ -258,11 +258,11 @@
                                                                 </ul>
                                                               </td>
                                                             </tr>
-                                                            <tr>
+                                                           <tr>
                                                               <td class="text-center table-data">2</td>
-                                                              <td class="text-center table-data">BCD</td>
-                                                              <td class="text-center table-data">6</td>
-                                                              <td class="text-center table-data">BCD</td>
+                                                              <td class="text-center table-data">AC Service & Repair</td>
+                                                              <td class="text-center table-data">2</td>
+                                                              <td class="text-center table-data">AC Services</td>
                                                               <td class="d-flex justify-content-center"> 
                                                                 <ul class="action"> 
                                                                   <li class="edit"> <a href="#" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
